<?xml version="1.0"?>
<package format="3">
  <name>asr_sdm_vio_cmake</name>
  <description>
    CMake configuration, scripts and macros common for ASR SDM VIO usage
  </description>
  <version>0.1.0</version>
  <license>tbd</license>

  <maintainer email="azxiyuanqian@outlook.com">lxy</maintainer>
  <author>Manuel Werlberger</author>
  <author>Christian Forster</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
